--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         
     </head>
      <body>
-         <p>stephanie jones</p>
+         <p>Stephanie Jones</p>
+         <h1>movies</h1>
      </body>
 </html>
